fix: footer overflow on smaller screens

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,7 +27,7 @@ body {
 main {
   @include flexCenter;
   flex-direction: column;
-  height: 100vh;
+  max-height: 100vh;
   justify-content: space-between;
 }
 
